Minor resizing issue on smaller screen size

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -8,7 +8,13 @@
     font-family: HaloHandletter;
     src: url('fonts/HaloHandletter.woff') format('woff');
 }
-
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
 body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden;
